--- a/mtg_nn_bot/model_settings.json
+++ b/mtg_nn_bot/model_settings.json
@@ -5,9 +5,5 @@
   "split": 0.8,
   "batch_size": 8,
   "lr": 0.001,
-  "progbar_label_count": 3,
-  "pack_size": 14,
-  "player_num": 8,
-  "round_num": 3,
-  "training": 1
+  "progbar_label_count": 3
 }
